<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:id="@+id/scroll">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        android:paddingBottom="50dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/cmplnlogo"
            android:id="@+id/imageViewLogo" />

        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:inputType="textEmailAddress"
            android:hint="@string/signupUserHint"
            android:textSize="10sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:id="@+id/editTextEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF00FF"
            android:textSize="10sp"
            android:id="@+id/textViewEmailValidator" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="0dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:gravity="center"
                android:hint="@string/signupPwd"
                android:textColorHint="#FFFFFF"
                android:inputType="textPassword"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:id="@+id/editTextPwd" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:gravity="center"
                android:hint="@string/signupCfmPwd"
                android:textColorHint="#FFFFFF"
                android:inputType="textPassword"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:id="@+id/editTextConfirmPwd" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF00FF"
                android:textSize="10sp"
                android:id="@+id/textViewPwdValidator" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:textSize="10sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/signInHint"
                android:clickable="true"
                android:onClick="GoToLogin"
                android:textColor="#FFFFFF"
                android:id="@+id/textViewSignin" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextstyle"
                android:text="@string/SignUp"
                android:onClick="SignUp"
                android:textColor="#FFFFFF"
                android:id="@+id/buttonSignUp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="0dp"
                android:textSize="10sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textViewServiceTerms" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>